2002-02-07  jacob berkman  <jacob@ximian.com>

	* gconf/Makefile.am (install-exec-local): don't install gconftool
	symlink

	* gconf.m4.in (AM_GCONF_SOURCE_2): call gconftool-2 rather than
	gconftool

2002-02-05  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-sanity-check.c (main): add gconf-sanity-check-2 app,
	which either exits sucessfully and does nothing, or pops up a
	dialog explaining a gconf problem and exits with a failure code.
	Could be placed in gnome-session, or at least we can tell users 
	to run it as a diagnostic tool.

	Only catches very simple problems so far.

	* configure.in: define XML_AND_GTK_CFLAGS

2002-02-05  Michael Meeks  <michael@ximian.com>

	* gconf/gconf.h: move (gconf_debug_shutdown) out of
	the internals guard - doh.

	* gconf/gconf-client.c (gconf_client_get_default):
	ensure we still own the reference we keep around.

2002-02-04  Havoc Pennington  <hp@redhat.com>

	* gconf/Makefile.am (regenerate-built-sources): give up and check
	stupid enum sources in to CVS and require manual rebuild.

	* configure.in: bump to 1.1.7, do library versioning.
	Default bdb backend to disabled, since I don't think 
	it's being actively used/tested.

	* autogen.sh: use automake-1.4 aclocal-1.4 if found

2002-02-02  jacob berkman  <jacob@ximian.com>

	* gconf/Makefile.am: re-enable explicit dependency on built
	sources, as it doesn't build otherwise.

2002-02-01  Havoc Pennington  <hp@pobox.com>

	* gconf/Makefile.am: include the *.sh scripts

	* gconf/regenerate-enum-footer.sh: fix screwup that broke build

2002-02-01  Havoc Pennington  <hp@redhat.com>

	* gconf/Makefile.am: move the complicated enum rules into small
	shell scripts (regenerate-enum-*.sh), rename CORBA_SOURCES to 
	CORBA_SOURCECODE

2002-01-28  Michael Meeks  <michael@ximian.com>

	* gconf/gconf-database.c: warning cleans.
	(impl_ConfigDatabase3_add_listener_with_properties):
	init name.
	(gconf_database_add_listener): right args for format.
