@@ -20,9 +20,9 @@ AC_DEFUN(AM_GCONF_SOURCE_2,
   AC_MSG_RESULT([Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation])
 
   if test "x$GCONF_SCHEMA_FILE_DIR" = "x"; then
-    GCONF_SCHEMA_FILE_DIR='$(DESTDIR)$(sysconfdir)/gconf/schemas/'
+    GCONF_SCHEMA_FILE_DIR='$(sysconfdir)/gconf/schemas/'
   else
-    GCONF_SCHEMA_FILE_DIR='$(DESTDIR)'$GCONF_SCHEMA_FILE_DIR
+    GCONF_SCHEMA_FILE_DIR=$GCONF_SCHEMA_FILE_DIR
   fi
 
   AC_ARG_WITH(gconf-schema-file-dir, 
