@@ -1,3 +1,8 @@
+2002-02-08  jacob berkman  <jacob@ximian.com>
+
+	* gconf.m4.in: revert some stuff i didn't mean to commit
+	yesterday.  Fixes problems when building with DESTDIR set.
+
 2002-02-07  jacob berkman  <jacob@ximian.com>
 
 	* gconf/Makefile.am (install-exec-local): don't install gconftool
